--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-transition-group": "^4.4.5",
+    "swiper": "^11.0.4",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
