--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.0.0",
     "next": "14.0.1",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-transition-group": "^4.4.5",
