smooth scroll and fix image warning

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-transition-group": "^4.4.5",
+    "resize-observer-polyfill": "^1.5.1",
     "swiper": "^11.0.4",
     "tailwind-merge": "^2.0.0"
   },
