--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "next": "14.0.1",
     "react": "^18",
     "react-countup": "^6.5.0",
