--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.11.0",
     "react-transition-group": "^4.4.5",
     "resize-observer-polyfill": "^1.5.1",
+    "sharp": "^0.32.6",
     "swiper": "^11.0.4",
     "tailwind-merge": "^2.0.0"
   },
